--- a/package.json
+++ b/package.json
@@ -1,35 +1,34 @@
 {
-  "name": "dec",
+  "name": "v2",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "build": "next build --turbopack",
+    "start": "next start"
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.2.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "date-fns": "^4.1.0",
-    "lucide-react": "^0.511.0",
-    "motion": "^12.14.0",
-    "next": "15.3.2",
+    "lucide-react": "^0.545.0",
+    "next": "15.5.4",
     "next-themes": "^0.4.6",
-    "radix-ui": "^1.4.2",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "sonner": "^2.0.3",
-    "tailwind-merge": "^3.3.0"
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
+    "sonner": "^2.0.7",
+    "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@trivago/prettier-plugin-sort-imports": "^5.2.2",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "prettier": "^3.6.2",
+    "prettier-plugin-tailwindcss": "^0.6.14",
     "tailwindcss": "^4",
-    "tw-animate-css": "^1.3.0",
+    "tw-animate-css": "^1.4.0",
     "typescript": "^5"
   }
 }
